--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/main.css">
-
 </head>
 
 <body>
-
-
     <main class="container">
         <nav class="navbar navbar-expand-lg mb-3 mt-3">
             <div class="container">
@@ -75,8 +72,6 @@
                 </div>
             </div>
         </nav>
-
-
         <section>
             <div class="hero rounded-5">
                 <img src="https://images.pexels.com/photos/323780/pexels-photo-323780.jpeg?auto=compress&cs=tinysrgb&w=1920"
@@ -170,19 +165,7 @@
                 </div>
             </div>
         </section>
-
-
-    </main>
-
-
-
-
-    <!-- Header -->
-    <!-- About 1 - Bootstrap Brain Component -->
-    <section class="py-3 py-md-5">
-        <div class="container">
-
-
+        <section>
             <div class="row mb-4">
                 <div class="col-md-12">
                     <h2 class="section-title">Featured Properties</h2>
@@ -246,36 +229,19 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <!-- Hero Section -->
-
-
-    <!-- Featured Properties -->
-    <div class="section-padding">
-        <div class="container">
-
-
-            <!--  -->
-
-            <!--  -->
-
-
-
-            <div class="row mb-4">
-                <div class="col-md-12">
-                    <h2 class="section-title">Featured Properties</h2>
-                </div>
-                <div class="col-md-6">
-                    <p>Explore our handpicked selection of premium properties designed to elevate your living
-                        experience.</p>
-                </div>
-            </div>
-
-
-
+        </section>
+        <section>
             <div class="row">
+                <div class="row mb-4">
+                    <div class="col-md-12">
+                        <h2 class="section-title">Featured Properties</h2>
+                    </div>
+                    <div class="col-md-6">
+                        <p>Explore our handpicked selection of premium properties designed to elevate your living
+                            experience.</p>
+                    </div>
+                </div>
+
 
 
 
@@ -503,13 +469,6 @@
 
 
             </div>
-
-
-            <!-- <div class="row">
-                <div class="col-12 text-center mt-4">
-                    <a href="#" class="btn btn-primary">View All Properties</a>
-                </div>
-            </div> -->
 
 
 
@@ -557,29 +516,8 @@
                     <div class="stats-number">150+</div>
                 </div>
             </div>
-
-        </div>
-
-
-
-
-    </div>
-    </div>
-
-
-
-
-
-    <!-- Services Section -->
-
-
-
-
-    <section class="py-3 py-md-5">
-        <div class="container">
-
-
-
+        </section>
+        <section class="py-3 py-md-5">
             <div class="row mb-4">
                 <div class="col-md-12">
                     <h2 class="section-title">Featured Properties</h2>
@@ -645,127 +583,124 @@
                         alt="About 1">
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
 
 
+        <section>
 
-
-    <!--  -->
-    <div class="container">
-
-
-        <div class="row mb-4">
-            <div class="col-md-12">
-                <h2 class="section-title">Featured Properties</h2>
-            </div>
-            <div class="col-md-6">
-                <p>Explore our handpicked selection of premium properties designed to elevate your living
-                    experience.</p>
-            </div>
-        </div>
-
-
-
-        <div class="row g-4">
-            <div class="col-md-6 col-lg-3">
-                <div class="card p-4 service-card h-100">
-                    <div class="icon-box">
-                        <img src="https://img.icons8.com/ios/50/home--v1.png" alt="Buying">
-                    </div>
-                    <h5 class="fw-bold">Buying Services</h5>
-                    <p class="text-muted">We help clients find and purchase their ideal home or investment property.</p>
-                    <div class="arrow-btn">
-                        <span>↗</span>
-                    </div>
+            <div class="row mb-4">
+                <div class="col-md-12">
+                    <h2 class="section-title">Featured Properties</h2>
+                </div>
+                <div class="col-md-6">
+                    <p>Explore our handpicked selection of premium properties designed to elevate your living
+                        experience.</p>
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-3">
-                <div class="card p-4 service-card h-100">
-                    <div class="icon-box">
-                        <img src="https://img.icons8.com/ios/50/real-estate.png" alt="Selling">
+
+
+            <div class="row g-4">
+                <div class="col-md-6 col-lg-3">
+                    <div class="card p-4 service-card h-100">
+                        <div class="icon-box">
+                            <img src="https://img.icons8.com/ios/50/home--v1.png" alt="Buying">
+                        </div>
+                        <h5 class="fw-bold">Buying Services</h5>
+                        <p class="text-muted">We help clients find and purchase their ideal home or investment property.
+                        </p>
+                        <div class="arrow-btn">
+                            <span>↗</span>
+                        </div>
                     </div>
-                    <h5 class="fw-bold">Selling Services</h5>
-                    <p class="text-muted">Our sales service includes property valuation, strategic marketing (both
-                        online and offline).</p>
-                    <div class="arrow-btn">
-                        <span>↗</span>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="card p-4 service-card h-100">
+                        <div class="icon-box">
+                            <img src="https://img.icons8.com/ios/50/real-estate.png" alt="Selling">
+                        </div>
+                        <h5 class="fw-bold">Selling Services</h5>
+                        <p class="text-muted">Our sales service includes property valuation, strategic marketing (both
+                            online and offline).</p>
+                        <div class="arrow-btn">
+                            <span>↗</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="card p-4 service-card h-100">
+                        <div class="icon-box">
+                            <img src="https://img.icons8.com/ios/50/key--v1.png" alt="Rental">
+                        </div>
+                        <h5 class="fw-bold">Rental &amp; Leasing</h5>
+                        <p class="text-muted">Manage all aspects of the rental process. This includes property listings
+                            etc.
+                        </p>
+                        <div class="arrow-btn">
+                            <span>↗</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="card p-4 service-card h-100">
+                        <div class="icon-box">
+                            <img src="https://img.icons8.com/ios/50/commercial--v1.png" alt="Management">
+                        </div>
+                        <h5 class="fw-bold">Property Management</h5>
+                        <p class="text-muted">We offer full-service property management for landlords and absentee
+                            owners.
+                        </p>
+                        <div class="arrow-btn">
+                            <span>↗</span>
+                        </div>
                     </div>
                 </div>
             </div>
+        </section>
 
-            <div class="col-md-6 col-lg-3">
-                <div class="card p-4 service-card h-100">
-                    <div class="icon-box">
-                        <img src="https://img.icons8.com/ios/50/key--v1.png" alt="Rental">
-                    </div>
-                    <h5 class="fw-bold">Rental &amp; Leasing</h5>
-                    <p class="text-muted">Manage all aspects of the rental process. This includes property listings etc.
-                    </p>
-                    <div class="arrow-btn">
-                        <span>↗</span>
-                    </div>
-                </div>
-            </div>
 
-            <div class="col-md-6 col-lg-3">
-                <div class="card p-4 service-card h-100">
-                    <div class="icon-box">
-                        <img src="https://img.icons8.com/ios/50/commercial--v1.png" alt="Management">
+        <section>
+
+
+            <div class="mt-5">
+                <div class="row mb-4">
+                    <div class="col-md-12">
+                        <h2 class="section-title">Featured Properties</h2>
                     </div>
-                    <h5 class="fw-bold">Property Management</h5>
-                    <p class="text-muted">We offer full-service property management for landlords and absentee owners.
-                    </p>
-                    <div class="arrow-btn">
-                        <span>↗</span>
+                    <div class="col-md-6">
+                        <p>Explore our handpicked selection of premium properties designed to elevate your living
+                            experience.</p>
                     </div>
                 </div>
+
+
             </div>
-        </div>
 
-    </div>
-    <!-- Contact Section -->
 
-    <div class="container mt-5">
-        <div class="row mb-4">
-            <div class="col-md-12">
-                <h2 class="section-title">Featured Properties</h2>
+            <div class="row">
+                <form action="#">
+
+                    <div class="d-flex align-items-center justify-content-between">
+
+                        <input type="text">
+                        <input type="text">
+                        <button>sen</button>
+                    </div>
+
+                </form>
             </div>
-            <div class="col-md-6">
-                <p>Explore our handpicked selection of premium properties designed to elevate your living
-                    experience.</p>
-            </div>
-        </div>
+
+        </section>
 
 
-    </div>
+    </main>
 
-
-
-
-  
-
-
-
-    <style>
-        .cover_card {
-            height: 45vh;
-            background-size: cover;
-            border-radius: 10px;
-        }
-    </style>
-
-  <section id="footer"></section>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./assets/script/app.js"></script>
+    <section id="footer"></section>
     <script src="./assets/script/footer.js"></script>
-
-
-    <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
