--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <a class="nav-link" href="#">Intro</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./assets/page/About.html">About</a>
+                            <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Highlights</a>
@@ -195,7 +195,7 @@
                             <div class="email">
                                 Request a Quote: <span class="theme_color">EGY-HILLS@gmail.com</span>
                             </div>
-                            <a href="./assets/page/About.html" class="theme-btn btn-style-three">Read More</a>
+                            <a href="#" class="theme-btn btn-style-three">Read More</a>
                         </div>
                     </div>
 
