--- a/index.html
+++ b/index.html
@@ -132,33 +132,32 @@
                         <ul class="site-menu__links">
                             <li id="menu-item-227"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-227"><a
-                                    href="https://www.rj-investments.co.uk/introduction/">Introduction</a></li>
+                                    href="/index.html">Home</a></li>
                             <li id="menu-item-230"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-230"><a
-                                    href="https://www.rj-investments.co.uk/the-property-avatar/">The Property Avatar</a>
+                                    href="./assets/page/About.html">About Us</a>
                             </li>
                             <li id="menu-item-338"
                                 class="menu-item menu-item-type-taxonomy menu-item-object-property_type menu-item-338">
-                                <a href="https://www.rj-investments.co.uk/property-type/portfolio/">The Portfolio</a>
+                                <a href="./assets/page/Projects.html">Projects / Developments</a>
                             </li>
                             <li id="menu-item-232"
                                 class="menu-item menu-item-type-taxonomy menu-item-object-property_type menu-item-232">
-                                <a href="https://www.rj-investments.co.uk/property-type/projects/">The Projects</a>
+                                <a href="./assets/page/Services.html">Services</a>
                             </li>
                             <li id="menu-item-233"
                                 class="menu-item menu-item-type-taxonomy menu-item-object-property_type menu-item-233">
-                                <a
-                                    href="https://www.rj-investments.co.uk/property-type/accommodation/">Accommodation</a>
+                                <a href="./assets/page/Booking.html">Booking / Inquiry</a>
                             </li>
                             <li id="menu-item-229"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-229"><a
-                                    href="https://www.rj-investments.co.uk/investors/">Investors</a></li>
+                                    href="./assets/page/Partners.html">Partners</a></li>
                             <li id="menu-item-310"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-310"><a
-                                    href="https://www.rj-investments.co.uk/pandora-homes/">Pandora Homes</a></li>
+                                    href="./assets/page/privacy.html">Privacy Policy</a></li>
                             <li id="menu-item-226"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-226"><a
-                                    href="https://www.rj-investments.co.uk/contact/">Contact</a></li>
+                                    href="./assets/page/Contact.html">Contact Us</a></li>
                         </ul>
 
                         <ul class="social social--menu">
